--- a/Css/Css_cena.css
+++ b/Css/Css_cena.css
@@ -67,3 +67,8 @@
     display: flex;
     justify-content: space-between;
   }
+  .video {
+    width: 50%;
+    margin: 0 auto;
+    padding: 20px;
+  }
