--- a/style_index.css
+++ b/style_index.css
@@ -22,8 +22,8 @@ body {
 }
 
 .header h1 {
-  font-size: 24px;
-  color: #333;
+  font-size: 50px;
+  color:#333;
 }
 
 .header nav a {
@@ -95,4 +95,18 @@ body {
   background-color: #f5f5f5;
   color: #666;
   font-size: 14px;
+}
+
+.h1{
+  margin-left: 300px;
+  font-family: cursive;
+}
+
+.body{
+  background-color:rgb(255, 244, 244);
+}
+
+.body{
+  display: flex;
+    flex-wrap: wrap;
 }
