--- a/css_contacto.css
+++ b/css_contacto.css
@@ -33,8 +33,8 @@ footer {
 }
 nav {
 	background-color: blue; /* Cambia el color de fondo a azul */
-	text-align: right; /* Alinea el contenido a la derecha */
-	padding: 10px; /* Agrega un espacio alrededor del contenido */
+	display: inline-block; /* Hace que el elemento se comporte como un bloque en línea */
+	padding: 10px; /* Agrega un espacio interno alrededor del contenido */
   }
   
   nav a {
