--- a/css_contacto.css
+++ b/css_contacto.css
@@ -14,6 +14,8 @@ header {
 h1 {
 	margin: 0;
 	font-size: 48px;
+	font-family: cursive;
+	text-align: center;
 }
 
 main {
@@ -32,17 +34,18 @@ footer {
 	text-align: center;
 }
 nav {
-	background-color: rgb(11, 11, 31); /* Cambia el color de fondo a azul */
-	display: inline-block; /* Hace que el elemento se comporte como un bloque en línea */
-	padding: 10px; /* Agrega un espacio interno alrededor del contenido */
+	background-color: rgb(11, 11, 31); 
+	
+	padding: 10px; 
+	text-align: center;
   }
   
   nav a {
-	color: white; /* Cambia el color de letra a blanco */
-	padding: 10px; /* Agrega un espacio interno alrededor del enlace */
-	text-decoration: none; /* Quita la decoración de enlace */
+	color: white; 
+	padding: 10px; 
+	text-decoration: none; 
   }
   
   nav a:hover {
-	color: violet; /* Cambia el color de letra a violeta al pasar el cursor por encima */
+	color: violet; 
   }
