--- a/Css/Css_merienda.css
+++ b/Css/Css_merienda.css
@@ -76,3 +76,16 @@
     margin-left: 0px;
     font-family: cursive;
   }
+  button[type="submit"] {
+    background-color: rgb(34, 166, 153);
+    color: white;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 16px;
+  }
+  
+  button[type="submit"]:hover {
+    background-color: rgb(34, 166, 153);
+  }
