--- a/Css/Css_almuerzo.css
+++ b/Css/Css_almuerzo.css
@@ -77,3 +77,16 @@ h1{
   margin-left: 0px;
   font-family: cursive;
 }
+button[type="submit"] {
+  background-color: hsl(32, 39%, 49%);
+  color: white;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 16px;
+}
+
+button[type="submit"]:hover {
+  background-color: #8e623e;
+}
