--- a/Css/Css_desayuno.css
+++ b/Css/Css_desayuno.css
@@ -76,3 +76,18 @@
     margin-left: 0px;
     font-family: cursive;
   }
+  
+  
+  button[type="submit"] {
+    background-color: hsl(300, 39%, 49%);
+    color: white;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 16px;
+  }
+  
+  button[type="submit"]:hover {
+    background-color: #853e8e;
+  }
