--- a/Css/Css_almuerzo.css
+++ b/Css/Css_almuerzo.css
@@ -78,7 +78,7 @@ h1{
   font-family: cursive;
 }
 button[type="submit"] {
-  background-color: hsl(32, 39%, 49%);
+  background-color: rgb(192, 127, 0);
   color: white;
   padding: 10px 20px;
   border: none;
@@ -88,5 +88,5 @@ button[type="submit"] {
 }
 
 button[type="submit"]:hover {
-  background-color: #8e623e;
+  background-color: rgb(192, 127, 0)8e623e;
 }
