--- a/Css/Css_cena.css
+++ b/Css/Css_cena.css
@@ -90,3 +90,7 @@
   button[type="submit"]:hover {
     background-color:  rgb(10, 110, 189);
   }
+  .video iframe {
+    width: 100%;
+    height: auto;
+  }
