--- a/css/css_acerca_de.css
+++ b/css/css_acerca_de.css
@@ -1,5 +1,5 @@
 body {
-	background-image:url(imagenes/cielo-nocturno-con-estrellas-entre-montanas-4057.jpg);
+	background-image:url(../imagenes/imagen_acerca_de.jpg);
 	background-size: cover;
 	background-position: center;
 	color: #fff;
