--- a/css/css_contacto.css
+++ b/css/css_contacto.css
@@ -1,5 +1,5 @@
 body {
-	background-image:url(imagenes/pizarra-fondo-iconos-contacto-colores.jpg);
+	background-image:url(../imagenes/imagen_contacto.jpg);
 	background-size:cover;
 	background-position:center;
 	color:#fff;
